--- a/minimal.html
+++ b/minimal.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="utf-8">
-        <title>Space Invaders Emulator</title>
+        <title>Minimal SDL3 Example</title>
     </head>
     <style>
       body, html {
